# TDLoopDetector

./: CMakeLists.txt  LICENSE.txt  README.md  package.xml
demo/pc/: demo.cpp
include/TDLoopDetector/: DetectionResult.h  Exception.h  GeometryChecker.h  Island.h  KeyPoint.h  MatchPair.h  PairsMatcher.h  Params.h  TDLoopDetector.h  TemplatedLoopDetector.hpp  TemporalWindow.h  Transform.h
include/TDLoopDetector/pc/: GroupClusterMatcher.hpp  PCBridge.h  PCLKdPairsMatcher.hpp  PCLNdtGeometryChecker.hpp  PCLRansacGeometryChecker.hpp  traits.h
src/: Island.cpp  Params.cpp
